Changed profile picture to fix uppercase file

--- a/about-me.html
+++ b/about-me.html
@@ -41,7 +41,7 @@
     <main>
       <h2 class="title">About me</h2>
 
-      <img class="phil" src="/img/profile.JPG" alt="Profile Picture" />
+      <img class="phil" src="/img/profile.jpg" alt="Profile Picture" />
 
       <div>
         <p>
