--- a/contact.html
+++ b/contact.html
@@ -29,8 +29,9 @@
     <header class="header">
       <div class="navigation">
         <a href="/index.html">Home</a>
+        <a href="/Phil-CV.pdf" download>Curriculum Vitae</a>
         <a href="/about-me.html">About Me</a>
-        <a href="/index.html">Contact</a>
+        <a href="/contact.html">Contact</a>
       </div>
 
       <h1>Philippe Canavarro</h1>
@@ -38,13 +39,19 @@
 
     <!-- Main -->
     <main>
-      <h2 class="title">Contact</h2>
+      <h2 class="title">Contact / Links</h2>
       <br>
       <a href="https://github.com/pcanavar">
         <img class="contacts" src="/img/github.png" alt="Github Picture"/>
       </a>
+      <a href="https://git.coinmode.com/Philippe">
+        <img class="contacts" src="/img/gitlab.svg" alt="Github Picture"/>
+      </a>
       <a href="https://www.linkedin.com/in/pcanavar/">
         <img class="contacts" src="/img/linkedin.png" alt="Linkedin Picture"/>
+      </a>
+      <a href="https://api.whatsapp.com/send/?phone=447926326846&text=Hello%20Phil">
+        <img class="contacts" src="/img/WhatsApp.svg" alt="Linkedin Picture"/>
       </a>
 
       </div>
@@ -53,7 +60,7 @@
     <footer>
       <div>
         <p></p>
-        <p>Copyrights &copy; 2021 Philippe Canavarro.</p>
+        <p>Copyrights &copy; 2022 Philippe Canavarro.</p>
         <p>All Rights Reserved.</p>
       </div>
     </footer>
