--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <header class="header">
       <div class="navigation">
         <a href="/index.html">Home</a>
+        <a href="/Phil-CV.pdf" download>Curriculum Vitae</a>
         <a href="/about-me.html">About Me</a>
         <a href="/contact.html">Contact</a>
       </div>
@@ -47,7 +48,7 @@
       <div>
         <p></p>
         <p></p>
-        <p>Copyrights &copy; 2021 Philippe Canavarro.</p>
+        <p>Copyrights &copy; 2022 Philippe Canavarro.</p>
         <p>All Rights Reserved.</p>
       </div>
     </footer>
